Adding and styling stocks table

--- a/app/src/styling/index.css
+++ b/app/src/styling/index.css
@@ -6,7 +6,6 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #030216;
-  /* background-color: #38388f; */
 }
 
 code {
@@ -14,20 +13,20 @@ code {
     monospace;
 }
 
-:root {
-  /* --primary-color: #007bff; Blue */
-  /* --secondary-color: #6c757d;  */
+body,html {
+  margin: 0;
+  padding: 0;
+}
+* {
+  box-sizing: border-box;
 }
 
-/* .gradient-text {
-  background-color: #f3ec78;
-  background-image: linear-gradient(#f3ec78, #af4261);
-  background-image: conic-gradient(#f3ec78, #af4261);
-} */
+html {
+  overflow-y: scroll;
+}
+
 .gradient-text {
   background-color: #f3ec78;
-  /* background-image: linear-gradient(45deg, #f3ec78, #af4261); */
-  /* background: linear-gradient(45deg, rgba(255,0,232,1) 0%, rgba(0,228,255,1) 100%); */
   background: linear-gradient(45deg, rgba(255,0,232,1) 0%, rgba(0,255,192,1) 100%);
   background-size: 100%;
   -webkit-background-clip: text;
@@ -37,10 +36,41 @@ code {
 }
 
 .bg-gradient-custom {
-  background: linear-gradient(45deg, #141d96 0%, rgb(6, 112, 158) 100%);
+  /* background: linear-gradient(45deg, #141d96 0%, rgb(6, 112, 158) 100%); */
+  background: rgb(45, 0, 208);
+  
 }
 
 .bg-gradient-custom:hover {
-  background: linear-gradient(45deg, #0c136b 0%, rgba(5,99,138,1) 100%);
-  /* background: linear-gradient(45deg, #0c136b 0%, rgb(237, 237, 237) 100%); */
+  background: rgb(45, 0, 208);
+  opacity: .9;
+}
+
+#stocks-table {
+  --bs-table-color: white;
+  --bs-table-striped-color: white;
+  --bs-table-bg: linear-gradient(90deg, rgba(0,24,95,1) 0%, rgba(1,12,45,1) 100%);
+  border-color: transparent;
+  margin: 0;
+}
+
+.stocks-table-row {
+  background: linear-gradient(90deg, rgba(0,24,95,1) 0%, rgba(1,12,45,1) 100%);
+  cursor: pointer;
+}
+
+.stocks-table-row-striped {
+  background: linear-gradient(90deg, rgba(1,12,45,1) 0%, rgba(0,24,95,1) 100%);
+}
+
+.stocks-table-row:hover{
+  opacity: .8;
+}
+
+.table .stocks-table-cell {
+  padding: 20px;
+}
+
+.table-responsive {
+  border-radius: 20px;
 }
