--- a/app/src/styling/index.css
+++ b/app/src/styling/index.css
@@ -74,3 +74,7 @@ html {
 .table-responsive {
   border-radius: 20px;
 }
+
+g {
+  opacity: 1 !important; /* Using !important to ensure the property is overridden */
+}
