--- a/app/src/styling/index.css
+++ b/app/src/styling/index.css
@@ -94,13 +94,13 @@ g {
 }
 
 .search-dropdown-selected {
-  background: rgba(15, 0, 181, 1);
-  color: white;
+  background: white;
+  color: rgba(8, 0, 91, 1);
 }
 
 .search-dropdown-selected:hover {
-  background: rgba(15, 0, 181, 1);
-  color: white;
+  background: white;
+  color: rgba(8, 0, 91, 1);
 }
 
 .search-dropdown {
@@ -109,6 +109,21 @@ g {
 }
 
 .search-dropdown:hover {
-  background: rgba(15, 0, 181, 1);
-  color: white;
+  background: white;
+  color: rgba(8, 0, 91, 1);
+}
+
+.text-underline {
+  text-decoration: none; /* Remove default underline */
+  position: relative;
+}
+
+.text-underline::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: -5px; /* Adjust thickness as needed */
+  width: 100%;
+  height: 3px; /* Adjust thickness as needed */
+  background-color: white; /* Adjust color as needed */
 }
